added footer on css and edited javascripst

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,9 @@
 body {
-    background: wheat;
+    background: rgb(218, 212, 201);
 }
 h1 {
+    text-align: center;
+}
+footer {
     text-align: center;
 }
